beryllium (0.4.3) debian;

  * New field: Accession number is hidden by default
  * Clips & images uses different series no/series uid

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 13 Feb 2014 11:22:00 +0900

beryllium (0.4.2) debian;

  * New field: Accession number
  * Dedicated archive window

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 12 Feb 2014 19:12:00 +0900

beryllium (0.4.1) debian;

  * D-Bus support. One method: startStudy(id,name,sex,bd,phys,study)
  * Limit Beryllium to one instance (via D-BUS)

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 12 Feb 2014 15:56:00 +0900

beryllium (0.4.0) debian;

  * Tablet (touch) version

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 11 Feb 2014 12:12:00 +0900

beryllium (0.3.28) debian;

  * Dedicated output folder for video logs
  * Timeout for clips recording

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 7 Feb 2014 11:35:00 +0900

beryllium (0.3.27) debian;

  * Option to show start dialog (--auto-start, -a)
  * Support for cameras with ranged resolution
  * The option "Send videos as raw data" implemented
  * New attributes: StudyDescription, PerforminPhysicianName
  * Clear thumbnail list in capture window on end of study
  * Restore scrollbar in icon mode in archive window

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 6 Feb 2014 17:33:00 +0900

beryllium (0.3.26) debian;

  * Mark files sent to DICOM with overlays
  * 0.3.16 Regression fix (camera resolution unselectable)
  * Worklist may crash if data/time columns are absent
  * Volume Up/Down keys works as Up/Down keys in lists
  * Automatically open and close archive window

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 6 Feb 2014 13:36:00 +0900

beryllium (0.3.24) debian;

  * 0.3.19 regression fix (still video log)

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 1 Feb 2014 16:26:00 +0900

beryllium (0.3.23) debian;

  * Option to send video clips or entire log to DICOM servers

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 31 Jan 2014 13:15:00 +0900

beryllium (0.3.22) debian;
